# appfolio-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  images.py  main.py  scheduler.py  sites.yaml.example  storage.py
app/scraper/: appfolio_html.py  normalize.py
caddy/: Caddyfile
docs/: APPFOLIO_SOURCES.md  DEPLOY.md  FRONTEND.md
systemd/: appfolio-api.service
